--- a/package.json
+++ b/package.json
@@ -8,10 +8,17 @@
   },
   "dependencies": {
     "@hono/node-server": "^1.14.3",
-    "hono": "^4.7.10"
+    "cross-env": "^7.0.3",
+    "dotenv": "^16.5.0",
+    "hono": "^4.7.10",
+    "pg": "^8.16.0",
+    "reflect-metadata": "^0.2.2",
+    "rimraf": "^6.0.1",
+    "typeorm": "^0.3.24"
   },
   "devDependencies": {
-    "@types/node": "^20.11.17",
+    "@types/node": "^20.17.52",
+    "ts-node": "^10.9.2",
     "tsx": "^4.7.1",
     "typescript": "^5.8.3"
   }
