--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "practice1_academy",
   "type": "module",
   "scripts": {
-    "dev": "tsx watch src/index.ts",
-    "build": "tsc",
-    "start": "node dist/index.js"
+    "clean": "rimraf dist",
+    "dev": "cross-env NODE_ENV=development tsx watch src/index.ts",
+    "build": "npm run clean && tsc",
+    "start": "npm run build && cross-env NODE_ENV=production node dist/index.js"
   },
   "dependencies": {
     "@hono/node-server": "^1.14.3",
