--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@hono/node-server": "^1.14.3",
     "bcrypt": "^6.0.0",
+    "class-transformer": "^0.5.1",
     "cross-env": "^7.0.3",
     "dotenv": "^16.5.0",
     "hono": "^4.7.11",
